tests/machine/x/go/save_jsonl_stdout.error
run error: exit status 1
# command-line-arguments
tests/machine/x/go/save_jsonl_stdout.go:13:14: undefined: PeopleItem
tests/machine/x/go/save_jsonl_stdout.go:16:5: undefined: PeopleItem
tests/machine/x/go/save_jsonl_stdout.go:20:21: undefined: v
